# uefi-run

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  bors.toml  flake.nix  snapcraft.yaml
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: lib.rs  startup.nsh
src/: args.rs  image.rs  lib.rs  main.rs  qemu.rs  startup.nsh
