[package]
name = "uefi-run"
description = "Run UEFI applications"
version = "0.4.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/uefi-run"
edition = "2018"

[workspace]
members = ["lib"]

[dependencies]
clap = "2.32"
uefi-run-lib = "0.4"

[patch.crates-io]
uefi-run-lib = { path="lib" }
