[package]
name = "uefi-run"
description = "Run UEFI applications"
version = "0.5.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/uefi-run"
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["cargo", "derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
fatfs = "0.3"
tempfile = "3.0"
wait-timeout = "0.2"
