[package]
name = "uefi-run"
description = "Run UEFI applications"
version = "0.6.1"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
license = "MIT"
repository = "https://github.com/richard-w/uefi-run"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "uefi-run"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
fatfs = "0.3"
tempfile = "3.0"
wait-timeout = "0.2"
